--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "draft-js": "^0.11.7",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-quilljs": "^2.0.5",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
