--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
