--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.4.7",
+    "jspdf": "^3.0.0",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
